[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A key-value store written in Rust"
authors = ["Anirudh Sudhir"]


[dependencies]
clap = "4.5.9"
serde = { version = "1.0.208", features = ["derive"] }
# flexbuffers = "2.0.0"
bson = "2.11.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.12.0"
walkdir = "2.5.0"
