[package]
name = "hobbes"
version = "0.1.0"
edition = "2021"
description = "A Bitcask-like log structured key-value store written in Rust"
authors = ["Anirudh Sudhir"]

[[bin]]
name = "hobbes-server"
path = "src/bin/hobbes-server.rs"

[[bin]]
name = "hobbes"
path = "src/bin/hobbes-client.rs"

[dependencies]
clap = { version = "4.5.9", features = ["env"] }
serde = { version = "1.0.208", features = ["derive"] }
rmp-serde = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "chrono", "fmt"] }
sled = "0.34.7"
rand = "0.8.5"
anyhow = "1.0.94"
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.12.0"
walkdir = "2.5.0"
criterion = "0.5.1"
crossbeam-utils = "0.8.21"
panic-control = "0.1.4"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
